--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
-        "zendframework/zend-expressive": "^1.0",
-        "zendframework/zend-expressive-fastroute": "^1.2",
-        "zendframework/zend-servicemanager": "^3.1"
+        "zendframework/zend-expressive": "1.0",
+        "zendframework/zend-expressive-fastroute": "1.2",
+        "zendframework/zend-servicemanager": "3.1"
     }
 }
